Fix timeline spacing

--- a/assets/sass/components/_timeline.scss
+++ b/assets/sass/components/_timeline.scss
@@ -45,6 +45,7 @@
   ul {
     list-style-type: none;
     padding: 0 0 0 4.2em;
+    margin-top: 0;
     max-width: 32em;
 
     &:first-of-type::after {
